--- a/about-me/aboutme.html
+++ b/about-me/aboutme.html
@@ -5,22 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jayce Develops</title>
     <link rel="stylesheet" href="style.css">
-    <script src="function.js"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
+    <script src="/function.js"></script>
 </head>
 <body>
     <nav>
         <h1 id="heading">Jayce Develops</h1>
 
         <!-- Home Tab -->
-        <div id="home-container" class="tab">
+        <div id="home-container" class="tab" onclick="homeClick()">
             <h3 id="home" class="tab-content">Home</h3>
         </div>
 
         <!-- About Me Tab -->
-        <div id="about-container" class="tab" onclick="aboutClick()">
+        <div id="about-container" class="tab">
             <h3 class="tab-content">About Me</h3>
         </div>
 
@@ -34,17 +31,16 @@
             <h3 class="tab-content">Projects</h3>
         </div>
     </nav>
-    <div id="side-container">
-        <div id="left-side">
-            <div class="welcome-container">
-                <h1>Welcome.</h1>
-            </div>
+    <div id="college">
+        <div id="college-container">
+            <h1>College</h1>
         </div>
-        <div id="right-side">
-            <h2>“Choose a job you love, and you will never have to work a day in your life.”</h2>
-            <h3>- Confucius</h3>
+
+        <div id="collegeinfo-container">
+
         </div>
     </div>
     
+
 </body>
 </html>
